--- a/resume.html
+++ b/resume.html
@@ -50,42 +50,47 @@ reports, other leaders in the organization, and technology/service partners.”
 
 <p><strong>Genentech, South San Francisco, CA 2010&#8211;2012</strong></p>
 
-<p>Assembled and led the team that managed and analyzed Research&#8217;s
-next-generation sequencing data. Assembled and led the team that curated,
-processed, and published Research&#8217;s mutation data. Managed the department&#8217;s
-contributions to the company-wide effort to modernize its antibody engineering
-processes. Managed Research&#8217;s in-house operations team and the relationship
-between the corporate and Research computing organizations. Member of the
-Technical Steering Committee and Senior Staff. Sponsored/drove migrations to
-modern source control systems, continuous integration systems, and automated
-deployment processes. Chosen to represent Senior Staff at junior staff
-development events. Mentor to several programmer analysts and computational
-biologists.</p>
+<p>Assembled and led the team that managed and analyzed hundreds of
+terabytes of next-generation sequencing data data for several thousand
+samples. Assembled and led the team that curated, analyzed, and
+published mutation data produced using various technologies over the
+preceding decade. Managed the department&#8217;s contributions to the
+company-wide effort to modernize its antibody engineering processes.
+Managed the Research division&#8217;s in-house operations team and
+represented Research to the corporate computing organizations. Member
+of Senior Staff and the Technical Steering Committee. Sponsored/drove
+migrations to modern source control systems, continuous integration
+systems, and automated deployment processes. Invited to represent
+Senior Staff at staff development events. Mentor to several
+programmer analysts and computational biologists.</p>
 
 <h3 id="principalprogrammeranalyst">Principal Programmer Analyst</h3>
 
 <p><strong>Genentech, South San Francisco, CA 2009</strong></p>
 
 <p>Led the ongoing development of Genentech&#8217;s Mutation, Variation, and
-Polymorphism platform; including reverse engineering and rescuing existing
-data, developing a reliable set of data storage and analysis tools, and
-deploying them as a production platform as well as an ad-hoc research tool.</p>
+Polymorphism platform, including reverse engineering and rescuing
+existing data, developing a reliable set of data storage and analysis
+tools, and deploying those tools as both a production platform and an
+ad-hoc research tool.</p>
 
 <h3 id="principal">Principal</h3>
 
 <p><strong>GH LLC, Oakland, CA 2005-Current</strong></p>
 
-<p>GH, LLC provides a variety of scientific, engineering, and management services
-to biotech and dot-com clients. Recent engagements include computational
-biology and engineering projects at Nebula, Genentech and Bayer Healthcare
-Pharmaceuticals. Past projects include: Senior Technical Advisor to the COO
-at HHMI&#8217;s Janelia Farm Research Campus, recruiting a new Director of
-Scientific Computing &amp; IT and helping with the interim management of the
-department; computational biology and automation projects at Schering AG;
-reviewing and critiquing the management and technical infrastructure of the
-computing groups within the six departments that make up the Life Sciences
-Division at Harvard University; and re-engineering Mark Yandell&#8217;s Comparative
-Genomics Library at the Berkeley Drosophila Genome Project.</p>
+<p>GH, LLC provides a variety of scientific, engineering, and management
+services to biotech and dot-com clients. Recent engagements include
+engineering and computational biology projects at <strong>Nebula</strong>,
+<strong>Genentech</strong> and <strong>Bayer Healthcare Pharmaceuticals</strong>. Past projects
+include: Senior Technical Advisor to the COO at <strong>HHMI&#8217;s Janelia Farm
+Research Campus</strong>, recruiting a new Director of Scientific Computing &amp;
+IT and helping with the interim management of the department;
+computational biology and automation projects at <strong>Schering AG</strong>;
+reviewing and critiquing the management and technical infrastructure
+of the computing groups within the six departments that make up the
+Life Sciences Division at <strong>Harvard University</strong>; and re-engineering
+Mark Yandell&#8217;s Comparative Genomics Library at the <strong>Berkeley
+Drosophila Genome Project</strong>.</p>
 
 <h3 id="scientificprogrammer">Scientific Programmer</h3>
 
@@ -168,22 +173,22 @@ management, and text processing for the department.</p>
 
 <h2 id="publications">Publications</h2>
 
-<h3 id="yandeletal.">Yandel <em>et al.</em></h3>
+<h3 id="yandelletal.">Yandell <em>et al.</em></h3>
 
 <p>Yandell MD, Mungall CJ, Prochnik S, Smith C, Kaminker J, Hartzell G,
 Lewis S, Rubin GM. Large-Scale Trends in the Evolution of Gene
-Structures within 11 Animal Genomes. PLoS Computational Biology,
+Structures within 11 Animal Genomes. <em>PLoS Computational Biology</em>,
 2(3), March 2006.</p>
 
 <h3 id="reeseetal.">Reese <em>et al.</em></h3>
 
 <p>Reese M, Hartzell G, Harris N, Ohler U, Abril J,
 Lewis S. Genome annotation assessment in Drosophila melanogaster.
-Genome Research, 10(4):483&#8211;501, April 2000.</p>
+<em>Genome Research</em>, 10(4):483&#8211;501, April 2000.</p>
 
 <h3 id="reeseetal.">Reese <em>et al.</em></h3>
 
-<p>Reese M, Harris N, Hartzell G, Ohler U, Lewis S. ISMB &#8217;99 Tutorial.
+<p>Reese M, Harris N, Hartzell G, Ohler U, Lewis S. <em>ISMB &#8217;99 Tutorial</em>.
 The challenge of annotating a complete eukaryotic genome: A case study
 in Drosophila melanogaster. A tutorial given at ISMB 1999 in
 Heidelberg, Germany.</p>
@@ -191,43 +196,43 @@ Heidelberg, Germany.</p>
 <h3 id="ashburneretal.">Ashburner <em>et al.</em></h3>
 
 <p>Ashburner M, et al. An exploration of the sequence of a 2.9-Mb region
-of the genome of Drosophila melanogaster: the Adh region. Genetics,
+of the genome of Drosophila melanogaster: the Adh region. <em>Genetics</em>,
 153(1):179&#8211;219, September 1999.</p>
 
 <h3 id="floreaetal.">Florea <em>et al.</em></h3>
 
 <p>Florea L, Hartzell G, Zhang Z, Rubin G, Miller W. A computer program
-for aligning a cDNA sequence with a genomic DNA sequence. Genome
-Research, 8(9):967&#8211;974, September 1998.</p>
+for aligning a cDNA sequence with a genomic DNA sequence. <em>Genome
+Research</em>, 8(9):967&#8211;974, September 1998.</p>
 
 <h3 id="dietrichetal.">Dietrich <em>et al.</em></h3>
 
 <p>Dietrich F, et al. The nucleotide sequence of Saccharomyces
-cerevisiae chromosome V. Nature, 387:78&#8211;81, May 1997.</p>
+cerevisiae chromosome V. <em>Nature</em>, 387:78&#8211;81, May 1997.</p>
 
 <h3 id="lipschutzetal.">Lipschutz <em>et al.</em></h3>
 
 <p>Lipschutz R, Taverner F, Hennesy K, Hartzell G, Davis R. DNA sequence
-confidence estimation. Genomics, 19(3):417&#8211;424, February 1994.</p>
+confidence estimation. <em>Genomics</em>, 19(3):417&#8211;424, February 1994.</p>
 
 <h3 id="hertzetal.">Hertz <em>et al.</em></h3>
 
 <p>Hertz G, Hartzell G, Stormo G. Identification of consensus patterns
-in unaligned DNA sequences known to be functionally related. Computer
-Applications in the Biosciences, 6(2):81&#8211;92, April 1990.</p>
+in unaligned DNA sequences known to be functionally related.
+<em>Computer Applications in the Biosciences</em>, 6(2):81&#8211;92, April 1990.</p>
 
 <h3 id="scottetal.">Scott <em>et al.</em></h3>
 
 <p>Scott M,
 Tamkun, J, Hartzell G. The structure and function of the homeodomain.
-Biochimica et Biophysica Acta: Reviews on Cancer, 989(1):25&#8211;48, July
+<em>Biochimica et Biophysica Acta: Reviews on Cancer</em>, 989(1):25&#8211;48, July
 1989.</p>
 
 <h3 id="stormoetal.">Stormo <em>et al.</em></h3>
 
 <p>Stormo G, Hartzell G. Identifying protein-binding sites from
-unaligned DNA fragments. Proceedings of the National Academy of
-Sciences, 86(4):1183&#8211;1187, February 1989.</p>
+unaligned DNA fragments. <em>Proceedings of the National Academy of
+Sciences</em>, 86(4):1183&#8211;1187, February 1989.</p>
     </div>
 </body>
 </html>
