* fix image url

--- a/resume.html
+++ b/resume.html
@@ -22,7 +22,7 @@ html,body{color:black}*{margin:0;padding:0}body{font:13.34px helvetica,arial,fre
   <div id="wrapper">
       <h1 style="text-align:center" id="georgehartzell">George Hartzell</h1>
 
-<p style="text-align:center;"><img src="telefest-full.jpg" style="width:768px;"></p>
+<p style="text-align:center;"><img src="telefest.jpg" style="width:768px;"></p>
 
 <ul>
 <li>Email: <code>hartzell at alerce.com</code></li>
