Fix double word

--- a/resume.html
+++ b/resume.html
@@ -742,7 +742,7 @@ reports, other leaders in the organization, and technology/service partners.”
 <p><strong>Genentech, South San Francisco, CA 2010&#8211;2012</strong></p>
 
 <p>Assembled and led the team that managed and analyzed hundreds of
-terabytes of next-generation sequencing data data for several thousand
+terabytes of next-generation sequencing data for several thousand
 samples. Assembled and led the team that curated, analyzed, and
 published mutation data produced using various technologies over the
 preceding decade. Managed the department&#8217;s contributions to the
