Small editorial changes

--- a/resume.html
+++ b/resume.html
@@ -749,7 +749,7 @@ preceding decade. Managed the department&#8217;s contributions to the
 company-wide effort to modernize its antibody engineering processes.
 Managed the Research division&#8217;s in-house operations team and
 represented Research to the corporate computing organizations. Member
-of Senior Staff and the Technical Steering Committee. Sponsored/drove
+of the Senior Staff and the Technical Steering Committee. Sponsored/drove
 migrations to modern source control systems, continuous integration
 systems, and automated deployment processes. Invited to represent
 Senior Staff at staff development events. Mentor to several
@@ -826,7 +826,7 @@ UNIX-based service.</p>
 <p>Provided support for computational biology tools, Internet connectivity and
 security, computational infrastructure and operations. Biotechnology clients
 included Genentech, Mercator Genetics, DNAX, Pangea Systems and Neomorphic
-Software. Software clients include Illustra Information Technologies,
+Software. Software clients included Illustra Information Technologies,
 Netscape Communications and Streetlight Software.</p>
 
 <h3 id="computationalgroupleader">Computational Group Leader</h3>
@@ -848,7 +848,7 @@ supported UNIX, VMS, Macintosh and PC systems.</p>
 
 <p>Built the department&#8217;s computing facility and collaborated with Gary Stormo on
 his research projects. Responsible for hardware and systems software
-selection and maintenance, application programming and user support Upgraded
+selection and maintenance, application programming and user support. Upgraded
 the facility from a single Pyramid 90x using serial terminals to a distributed
 facility built around a MIPS M&#8211;2000 and independent workstations. The
 facility provided tools for sequence analysis, data analysis, database
